--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width" />
     <script type="module" src="./src/index.js"></script>
     <link href="src/style.css" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   </head>
   <!-- Navbar -->
   <div class="div" id="top">
