--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Bruno Ribeiro</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <script type="module" src="./src/index.js"></script>
+    <script type="module" src="src/index.js"></script>
     <link href="src/style.css" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   </head>
