--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Bruno Ribeiro</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <script type="text/javascript" src="src/index.js"></script>
     <link href="src/style.css" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   </head>
@@ -178,6 +177,8 @@
         </div>
       </div>
     </div>
+      <!-- script -->
+    <script src="src/index.js"></script>
   </body>
   <!-- Footer -->
   <footer>
