--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <a class="nav-link active" href="#experience">// experience</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">// biography</a>
+        <a class="nav-link" href="#tools">// tools</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#contacts">// contacts</a>
+        <a class="nav-link" href="#links">// links</a>
       </li>
     </ul>
   </div>
@@ -54,7 +54,7 @@
         aria-valuemin="0"
         aria-valuemax="100"
       >
-        <div class="progress-bar w-75" style="width: 82%">Typescript</div>
+        <div class="progress-bar w-75" style="width: 62%">AWS Deployment</div>
       </div>
       <div
         class="progress"
@@ -64,7 +64,7 @@
         aria-valuemin="0"
         aria-valuemax="100"
       >
-        <div class="progress-bar" style="width: 80%">C#</div>
+        <div class="progress-bar" style="width: 70%">Software arquitecture</div>
       </div>
       <div
         class="progress"
@@ -74,7 +74,7 @@
         aria-valuemin="0"
         aria-valuemax="100"
       >
-        <div class="progress-bar" style="width: 60%">Java</div>
+        <div class="progress-bar" style="width: 60%">SQL Model</div>
       </div>
       <div
         class="progress"
@@ -118,7 +118,6 @@
       </div>
     </div>
     <!-- Projects -->
-
     <div class="row row-cols-1 row-cols-md-3 g-4 m-4">
       <div class="col">
         <div class="card">
@@ -182,20 +181,17 @@
   </body>
   <!-- Footer -->
   <footer>
-    <div class="contacts" id="contacts">
-      <div class="contacts-img">
-        <a href="https://github.com/thatsBruno" target="_blank">
-          <img src="/github.png" class="logo-contacts" alt="github"
-        /></a>
-        <a
-          href="https://www.linkedin.com/in/brunodasilvaribeiro"
-          target="_blank"
-        >
-          <img src="/logo-linkedin.png" class="logo-contacts" alt="linkedin" />
-        </a>
-      </div>
+    <div class="contacts" id="links">
       <div class="contacts-text">
         Feel free to contact me through either one of my socials.
+      </div>
+      <div class="contacts-links">
+        <a href="https://github.com/thatsBruno" target="_blank">
+          Github</a>
+        <a
+          href="https://www.linkedin.com/in/brunodasilvaribeiro"
+          target="_blank">
+          LinkedIn</a>
       </div>
     </div>
   </footer>
