--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
   <footer>
     <div class="contacts" id="links">
       <div class="contacts-text">
-        Feel free to contact me through either one of my socials.
+        Connect
       </div>
       <div class="contacts-links">
         <a href="https://github.com/thatsBruno" target="_blank">
