--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <div class="col">
         <div class="card">
           <a
-            href="https://github.com/thatsBruno/ProductStore-BE"
+            href="https://github.com/thatsBruno/store-api"
             target="_blank"
           >
             <img
@@ -146,9 +146,9 @@
             />
           </a>
           <div class="card-body h-100">
-            <h5 class="card-title">Ecommerce app backend.</h5>
+            <h5 class="card-title">Ecommerce store app backend.</h5>
             <span class="card-text">
-              A Ecommerce app, written in .NET 7 with the basics CRUD api
+              A Ecommerce app, written in .NET 7 with the basics CRUD and repo pattern api
               features and using SQL.
             </span>
           </div>
