--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <div class="title">
       <h1>BRUNO RIBEIRO</h1>
       <h3>Software Engineer</h3>
+      <div class="engineer">
+        <img src="/engineer-img.png" alt="engineer" />
+      </div>
       <p id="experience">
         Hi, I'm Bruno, a software engineer working as a fullstack web-app
         developer with a focus in problem solving and software arquitecture!
