--- a/index.html
+++ b/index.html
@@ -53,21 +53,11 @@
         class="progress"
         role="progressbar"
         aria-label="Basic example"
-        aria-valuenow="25"
-        aria-valuemin="0"
-        aria-valuemax="100"
-      >
-        <div class="progress-bar w-75" style="width: 62%">AWS Deployment</div>
-      </div>
-      <div
-        class="progress"
-        role="progressbar"
-        aria-label="Basic example"
         aria-valuenow="50"
         aria-valuemin="0"
         aria-valuemax="100"
       >
-        <div class="progress-bar" style="width: 70%">Software arquitecture</div>
+        <div class="progress-bar" style="width: 60%">Software arquitecture</div>
       </div>
       <div
         class="progress"
@@ -77,7 +67,7 @@
         aria-valuemin="0"
         aria-valuemax="100"
       >
-        <div class="progress-bar" style="width: 60%">SQL Model</div>
+        <div class="progress-bar" style="width: 65%">Software development</div>
       </div>
       <div
         class="progress"
@@ -87,7 +77,7 @@
         aria-valuemin="0"
         aria-valuemax="100"
       >
-        <div class="progress-bar" style="width: 64%">CI/CD</div>
+        <div class="progress-bar" style="width: 56%">CI/CD</div>
       </div>
       <div
         class="progress"
@@ -97,7 +87,7 @@
         aria-valuemin="0"
         aria-valuemax="100"
       >
-        <div class="progress-bar" style="width: 77%">Unit testing</div>
+        <div class="progress-bar" style="width: 63%">Unit testing</div>
       </div>
       <div
         class="progress"
@@ -107,7 +97,7 @@
         aria-valuemin="0"
         aria-valuemax="100"
       >
-        <div class="progress-bar" style="width: 80%">Agile methodologies</div>
+        <div class="progress-bar" style="width: 65%">Agile methodologies</div>
       </div>
       <div
         class="progress"
@@ -117,7 +107,7 @@
         aria-valuemin="0"
         aria-valuemax="100"
       >
-        <div class="progress-bar" style="width: 73%">Problem solving</div>
+        <div class="progress-bar" style="width: 69%">Problem solving</div>
       </div>
     </div>
     <!-- Projects -->
