tech stack added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a class="nav-link active" href="#experience">// experience</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#tools">// tools</a>
+        <a class="nav-link" href="#projects">// projects</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#links">// links</a>
@@ -110,8 +110,26 @@
         <div class="progress-bar" style="width: 69%">Problem solving</div>
       </div>
     </div>
+    <!-- Teck stack -->
+    <div class="tech-stack">
+      <img src="icons/c-sharp.png" class="logo" alt="c-sharp" />
+      <img src="icons/docker.png" class="logo" alt="docker" />
+      <img src="icons/icons8-angular-512.png" class="logo" alt="angular" />
+      <img src="icons/icons8-gitlab-480.png" class="logo" alt="gitlab" />
+      <img src="icons/icons8-postgresql-480.png" class="logo" alt="postgresql" />
+      <img src="icons/js.png" class="logo" alt="js" />
+      <img src="icons/nodejs.png" class="logo" alt="nodejs" />
+      <img src="icons/sass.png" class="logo" alt="sass" />
+      <img src="icons/typescript.png" class="logo" alt="ts" />
+      <img src="icons/icons8-.net-framework-480.png" class="logo" alt=".net" />
+      <img src="icons/icons8-amazon-web-services-480.png" class="logo" alt="aws" />
+      <img src="icons/icons8-java-480.png" class="logo" alt="java" />
+      <img src="icons/icons8-kotlin-480.png" class="logo" alt="kt" />
+      <img src="icons/icons8-npm-480.png" class="logo" alt="npm" />
+      <img src="icons/icons8-git-480.png" class="logo" alt="git" />
+    </div>
     <!-- Projects -->
-    <div class="row row-cols-1 row-cols-md-3 g-4 m-4">
+    <div class="row row-cols-1 row-cols-md-3 g-4 m-4" id="projects">
       <div class="col">
         <div class="card">
           <a href="https://github.com/thatsBruno/Botzilla" target="_blank"
