--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
   </div>
   <!-- Body -->
   <body>
+  <!-- stars -->
+  <section class="wrapper">
+    <div id="stars"></div>
+    <div id="stars2"></div>
+    <div id="stars3"></div>
+  </section>
   <button click="topFunction()" id="topButton" title="Go to top">Top</button>
     <!-- title -->
     <div class="title">
