--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img src="/engineer-img.png" alt="engineer" />
       </div>
       <p id="experience">
-        Hi, I'm Bruno, a software engineer working with phyisical/virtual devices on ARM/Intel arquitechtures, with a focus in problem solving and software arquitecture!
+        Hi, I'm Bruno, a software engineer working on phyisical and virtual devices with ARM/Intel architecture, with a focus in problem solving and software arquitecture!
       </p>
     </div>
     <!-- colaborations -->
