--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img src="/engineer-img.png" alt="engineer" />
       </div>
       <p id="experience">
-        Hi, I'm Bruno, a software engineer working on physical and virtual devices with ARM/Intel architecture, with a focus in problem solving and software arquitecture!
+        Hi, I'm Bruno, a software engineer working on physical and virtual devices with ARM/Intel architecture, developing microservices and plugins with Go.
       </p>
     </div>
     <!-- colaborations -->
@@ -72,7 +72,7 @@
         aria-valuemin="0"
         aria-valuemax="100"
       >
-        <div class="progress-bar" style="width: 65%">Software development</div>
+        <div class="progress-bar" style="width: 70%">Software development</div>
       </div>
       <div
         class="progress"
@@ -82,7 +82,7 @@
         aria-valuemin="0"
         aria-valuemax="100"
       >
-        <div class="progress-bar" style="width: 56%">CI/CD</div>
+        <div class="progress-bar" style="width: 66%">CI/CD</div>
       </div>
       <div
         class="progress"
@@ -102,53 +102,44 @@
         aria-valuemin="0"
         aria-valuemax="100"
       >
-        <div class="progress-bar" style="width: 65%">Agile methodologies</div>
-      </div>
-      <div
-        class="progress"
-        role="progressbar"
-        aria-label="Basic example"
-        aria-valuenow="100"
-        aria-valuemin="0"
-        aria-valuemax="100"
-      >
         <div class="progress-bar" style="width: 69%">Problem solving</div>
       </div>
     </div>
     <!-- Teck stack -->
     <div class="tech-stack">
-      <img src="icons/c-sharp.png" class="logo" alt="c-sharp" />
+      <img src="icons/icons8-python-48.png" class="logo" alt="python" />
+      <img src="icons/icons8-kubernetes-48.png" class="logo" alt="kubernetes" />
       <img src="icons/docker.png" class="logo" alt="docker" />
-      <img src="icons/icons8-angular-512.png" class="logo" alt="angular" />
+      <img src="icons/icons8-amazon-web-services-480.png" class="logo" alt="aws" />
+      <img src="icons/icons8-golang-48.png" class="logo" alt="go" />
+      <img src="icons/icons8-git-480.png" class="logo" alt="git" />
       <img src="icons/icons8-gitlab-480.png" class="logo" alt="gitlab" />
       <img src="icons/icons8-postgresql-480.png" class="logo" alt="postgresql" />
+      <img src="icons/icons8-angular-512.png" class="logo" alt="angular" />
       <img src="icons/js.png" class="logo" alt="js" />
-      <img src="icons/nodejs.png" class="logo" alt="nodejs" />
-      <img src="icons/sass.png" class="logo" alt="sass" />
+      <img src="icons/icons8-nodejs-48.png" class="logo" alt="nodejs" />
       <img src="icons/typescript.png" class="logo" alt="ts" />
+      <img src="icons/c-sharp.png" class="logo" alt="c-sharp" />
       <img src="icons/icons8-.net-framework-480.png" class="logo" alt=".net" />
-      <img src="icons/icons8-amazon-web-services-480.png" class="logo" alt="aws" />
-      <img src="icons/icons8-java-480.png" class="logo" alt="java" />
-      <img src="icons/icons8-kotlin-480.png" class="logo" alt="kt" />
-      <img src="icons/icons8-npm-480.png" class="logo" alt="npm" />
-      <img src="icons/icons8-git-480.png" class="logo" alt="git" />
     </div>
     <!-- Projects -->
+    <h3 class="text-center mb-4"><span class="experience-title">Projects</span></h3>
     <div class="row row-cols-1 row-cols-md-3 g-4 m-4" id="projects">
+      <!-- Pommy -->
       <div class="col">
         <div class="card">
-          <a href="https://github.com/thatsBruno/Botzilla" target="_blank"
-            ><img src="discord-bot.jpeg" class="card-img-top" alt="discord bot"
+          <a href="https://github.com/thatsBruno/pommy" target="_blank"
+            ><img src="pommy.jpeg" class="card-img-top" alt="pommy"
           /></a>
           <div class="card-body h-100">
-            <h5 class="card-title">Botzila</h5>
+            <h5 class="card-title">Pommy</h5>
             <span class="card-text">
-              A Discord bot application, written with DiscordJS library, that
-              allows personalized commands in the server its invited to.
+              (Chrome extension/Javascript)
             </span>
           </div>
         </div>
       </div>
+      <!-- E-commerce app backend -->
       <div class="col">
         <div class="card">
           <a
@@ -162,14 +153,14 @@
             />
           </a>
           <div class="card-body h-100">
-            <h5 class="card-title">Ecommerce store app backend.</h5>
+            <h5 class="card-title">E-commerce store app</h5>
             <span class="card-text">
-              A Ecommerce app, written in .NET 7 with the basics CRUD and repo pattern api
-              features and using SQL.
+              (.Net)
             </span>
           </div>
         </div>
       </div>
+      <!-- E-commerce app frontend -->
       <div class="col">
         <div class="card">
           <a
@@ -183,10 +174,49 @@
             />
           </a>
           <div class="card-body h-100">
-            <h5 class="card-title">Ecommerce app frontend.</h5>
+            <h5 class="card-title">E-commerce app frontend.</h5>
             <span class="card-text">
-              A Ecommerce app, written in Angular 16 with the basics CRUD
-              services features.
+              (Angular)
+            </span>
+          </div>
+        </div>
+      </div>
+<!-- Web Scrapper -->
+      <div class="col">
+        <div class="card">
+          <a
+            href="https://github.com/thatsBruno/WebScrapper"
+            target="_blank">
+            <img
+              src="webscrapper.jpeg"
+              class="card-img-top"
+              alt="web scrapper"
+            />
+          </a>
+          <div class="card-body h-100">
+            <h5 class="card-title">Web Scrapper</h5>
+            <span class="card-text">
+              (.Net)
+            </span>
+          </div>
+        </div>
+      </div>
+      <!-- Chat app -->
+      <div class="col">
+        <div class="card">
+          <a
+            href="https://github.com/thatsBruno/chat-app"
+            target="_blank">
+            <img
+              src="chatapp.jpeg"
+              class="card-img-top"
+              alt="chat app"
+            />
+          </a>
+          <div class="card-body h-100">
+            <h5 class="card-title">Chat app</h5>
+            <span class="card-text">
+              (.Net/React)
             </span>
           </div>
         </div>
