--- a/index.html
+++ b/index.html
@@ -221,6 +221,26 @@
           </div>
         </div>
       </div>
+      <!-- Filebridge-->
+      <div class="col">
+        <div class="card">
+          <a
+            href="https://github.com/thatsBruno/filebridge"
+            target="_blank">
+            <img
+              src="filebridge.jpeg"
+              class="card-img-top"
+              alt="filebridge"
+            />
+          </a>
+          <div class="card-body h-100">
+            <h5 class="card-title">Filebridge</h5>
+            <span class="card-text">
+              (React/Supabase)
+            </span>
+          </div>
+        </div>
+      </div>
     </div>
       <!-- script -->
     <script src="src/index.js"></script>
@@ -228,16 +248,13 @@
   <!-- Footer -->
   <footer>
     <div class="contacts" id="links">
-      <div class="contacts-text">
-        Connect
-      </div>
       <div class="contacts-links">
         <a href="https://github.com/thatsBruno" target="_blank">
-          Github</a>
-        <a
-          href="https://www.linkedin.com/in/brunodasilvaribeiro"
-          target="_blank">
-          LinkedIn</a>
+          <img src="icons/icons8-github-100.png" alt="Github" class="social-icon" />
+        </a>
+        <a href="https://www.linkedin.com/in/brunodasilvaribeiro" target="_blank">
+          <img src="icons/icons8-linkedin-100.png" alt="LinkedIn" class="social-icon" />
+        </a>
       </div>
     </div>
   </footer>
