--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div id="stars2"></div>
     <div id="stars3"></div>
   </section>
-  <button click="topFunction()" id="topButton" title="Go to top">Top</button>
+  <button click="topFunction()" id="topButton" title="Go to top"></button>
     <!-- title -->
     <div class="title">
       <h1>BRUNO RIBEIRO</h1>
