added new projects

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
       gtag('config', 'G-NZY8TQ11XD');
     </script>
+    <!-- End Google tag (gtag.js) -->
   </head>
   <!-- Navbar -->
   <div class="div" id="top">
@@ -145,21 +146,81 @@
     <!-- Projects -->
     <h3 class="text-center mb-4"><span class="experience-title">Projects</span></h3>
     <div class="row row-cols-1 row-cols-md-3 g-4 m-4" id="projects">
-      <!-- Pommy -->
+      <!-- p2p server-->
       <div class="col">
         <div class="card">
-          <a href="https://github.com/thatsBruno/pommy" target="_blank"
-            ><img src="pommy.jpeg" class="card-img-top" alt="pommy"
-          /></a>
+          <a
+            href="https://github.com/thatsBruno/p2p-golang"
+            target="_blank">
+            <img
+              src="p2p.jpeg"
+              class="card-img-top"
+              alt="storyGen"
+            />
+          </a>
           <div class="card-body h-100">
-            <h5 class="card-title">Pommy</h5>
+            <h5 class="card-title">p2p service</h5>
             <span class="card-text">
-              (Chrome extension/Javascript)
+              (Go) currently in progress...
             </span>
           </div>
         </div>
       </div>
-      <!-- E-commerce app backend -->
+      <!-- Filebridge-->
+      <div class="col">
+        <div class="card">
+          <a
+          href="https://github.com/thatsBruno/filebridge"
+          target="_blank">
+          <img
+          src="filebridge.jpeg"
+          class="card-img-top"
+          alt="filebridge"
+          />
+        </a>
+        <div class="card-body h-100">
+          <h5 class="card-title">Filebridge</h5>
+          <span class="card-text">
+            (React/Supabase)
+          </span>
+        </div>
+      </div>
+    </div>
+    <!-- storyGen-->
+    <div class="col">
+      <div class="card">
+        <a
+        href="https://github.com/thatsBruno/storyGen"
+        target="_blank">
+        <img
+        src="storyGen.jpeg"
+        class="card-img-top"
+        alt="storyGen"
+        />
+      </a>
+      <div class="card-body h-100">
+        <h5 class="card-title">storyGen</h5>
+        <span class="card-text">
+          (Go/OpenAI)
+        </span>
+      </div>
+    </div>
+  </div>
+  <!-- Pommy -->
+  <div class="col">
+    <div class="card">
+      <a href="https://github.com/thatsBruno/pommy" target="_blank"
+        ><img src="pommy.jpeg" class="card-img-top" alt="pommy"
+      /></a>
+      <div class="card-body h-100">
+        <h5 class="card-title">Pommy</h5>
+        <span class="card-text">
+          (Chrome extension/Javascript)
+        </span>
+      </div>
+    </div>
+  </div>
+  <!-- E-commerce app backend -->
       <div class="col">
         <div class="card">
           <a
@@ -201,7 +262,7 @@
           </div>
         </div>
       </div>
-<!-- Web Scrapper -->
+      <!-- Web Scrapper -->
       <div class="col">
         <div class="card">
           <a
@@ -237,26 +298,6 @@
             <h5 class="card-title">Chat app</h5>
             <span class="card-text">
               (.Net/React)
-            </span>
-          </div>
-        </div>
-      </div>
-      <!-- Filebridge-->
-      <div class="col">
-        <div class="card">
-          <a
-            href="https://github.com/thatsBruno/filebridge"
-            target="_blank">
-            <img
-              src="filebridge.jpeg"
-              class="card-img-top"
-              alt="filebridge"
-            />
-          </a>
-          <div class="card-body h-100">
-            <h5 class="card-title">Filebridge</h5>
-            <span class="card-text">
-              (React/Supabase)
             </span>
           </div>
         </div>
