--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </div>
     <!-- Projects -->
     <h3 class="text-center mb-4"><span class="experience-title">Projects</span></h3>
-    <div class="row row-cols-1 row-cols-md-3 g-4 m-4" id="projects">
+    <div class="row row-cols-1 row-cols-md-4 g-4 m-4" id="projects">
       <!-- p2p server-->
       <div class="col">
         <div class="card">
@@ -166,6 +166,26 @@
           </div>
         </div>
       </div>
+      <!-- storyGen-->
+      <div class="col">
+        <div class="card">
+          <a
+          href="https://github.com/thatsBruno/storyGen"
+          target="_blank">
+          <img
+          src="storyGen.jpeg"
+          class="card-img-top"
+          alt="storyGen"
+          />
+        </a>
+        <div class="card-body h-100">
+          <h5 class="card-title">storyGen</h5>
+          <span class="card-text">
+            (Go/OpenAI)
+          </span>
+        </div>
+      </div>
+    </div>
       <!-- Filebridge-->
       <div class="col">
         <div class="card">
@@ -186,26 +206,6 @@
         </div>
       </div>
     </div>
-    <!-- storyGen-->
-    <div class="col">
-      <div class="card">
-        <a
-        href="https://github.com/thatsBruno/storyGen"
-        target="_blank">
-        <img
-        src="storyGen.jpeg"
-        class="card-img-top"
-        alt="storyGen"
-        />
-      </a>
-      <div class="card-body h-100">
-        <h5 class="card-title">storyGen</h5>
-        <span class="card-text">
-          (Go/OpenAI)
-        </span>
-      </div>
-    </div>
-  </div>
   <!-- Pommy -->
   <div class="col">
     <div class="card">
@@ -215,7 +215,7 @@
       <div class="card-body h-100">
         <h5 class="card-title">Pommy</h5>
         <span class="card-text">
-          (Chrome extension/Javascript)
+          (Chrome extension/JS)
         </span>
       </div>
     </div>
@@ -234,7 +234,7 @@
             />
           </a>
           <div class="card-body h-100">
-            <h5 class="card-title">E-commerce store app</h5>
+            <h5 class="card-title">E-commerce app</h5>
             <span class="card-text">
               (.Net)
             </span>
@@ -255,7 +255,7 @@
             />
           </a>
           <div class="card-body h-100">
-            <h5 class="card-title">E-commerce app frontend.</h5>
+            <h5 class="card-title">E-commerce app</h5>
             <span class="card-text">
               (Angular)
             </span>
