added ML project

--- a/index.html
+++ b/index.html
@@ -145,7 +145,27 @@
     </div>
     <!-- Projects -->
     <h3 class="text-center mb-4"><span class="experience-title">Projects</span></h3>
-    <div class="row row-cols-1 row-cols-md-4 g-4 m-4" id="projects">
+    <div class="row row-cols-1 row-cols-md-5 g-4 m-4" id="projects">
+    <!--ML-->
+      <div class="col">
+        <div class="card">
+          <a
+            href="https://github.com/thatsBruno/PortugueseApartmentPrice-ML"
+            target="_blank">
+            <img
+              src="ML.jpeg"
+              class="card-img-top"
+              alt="storyGen"
+            />
+          </a>
+          <div class="card-body h-100">
+            <h5 class="card-title">Apartment Predict</h5>
+            <span class="card-text">
+              (ML.NET) 
+            </span>
+          </div>
+        </div>
+      </div>
       <!-- p2p server-->
       <div class="col">
         <div class="card">
