info added about projects

--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
             />
           </a>
           <div class="card-body h-100">
-            <h5 class="card-title">Apartment Predict</h5>
+            <h5 class="card-title">Apartment Prediction</h5>
             <span class="card-text">
-              (ML.NET) 
+              (ML.NET) currently in progress...
             </span>
           </div>
         </div>
