added new project

--- a/index.html
+++ b/index.html
@@ -146,22 +146,22 @@
     <!-- Projects -->
     <h3 class="text-center mb-4"><span class="experience-title">Projects</span></h3>
     <div class="row row-cols-1 row-cols-md-5 g-4 m-4" id="projects">
-    <!--ML-->
+    <!--learning platform-->
       <div class="col">
         <div class="card">
           <a
-            href="https://github.com/thatsBruno/PortugueseApartmentPrice-ML"
+            href="https://github.com/thatsBruno/LearningPlatform"
             target="_blank">
             <img
-              src="ML.jpeg"
+              src="learning-platform.jpeg"
               class="card-img-top"
               alt="storyGen"
             />
           </a>
           <div class="card-body h-100">
-            <h5 class="card-title">Apartment Prediction</h5>
+            <h5 class="card-title">Learning Platform</h5>
             <span class="card-text">
-              (ML.NET) currently in progress...
+              (Spring Boot)
             </span>
           </div>
         </div>
@@ -182,6 +182,26 @@
             <h5 class="card-title">p2p service</h5>
             <span class="card-text">
               (Go) currently in progress...
+            </span>
+          </div>
+        </div>
+      </div>
+    <!--ML-->
+      <div class="col">
+        <div class="card">
+          <a
+            href="https://github.com/thatsBruno/PortugueseApartmentPrice-ML"
+            target="_blank">
+            <img
+              src="ML.jpeg"
+              class="card-img-top"
+              alt="storyGen"
+            />
+          </a>
+          <div class="card-body h-100">
+            <h5 class="card-title">Apartment Prediction</h5>
+            <span class="card-text">
+              (ML.NET)
             </span>
           </div>
         </div>
