--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                         <br> Hosted with Supabase, this projects uses its buckets for the file storage as well as for
                         the filetransfer and autosign URLs.
                     </small>
-                    <small class="tech-label">Technologies: React, Supabase</small> <!-- Added class for styling -->
+                    <small class="tech-label">Technologies: Typescript, React, Supabase</small> <!-- Added class for styling -->
                 </div>
             </div>
             <div class="project">
@@ -485,7 +485,7 @@
                     <small>
                         Chrome extension with pomodoro timer and task list.
                     </small>
-                    <small class="tech-label">Technologies: JavaScript, Chrome Extensions</small> <!-- Added class for styling -->
+                    <small class="tech-label">Technologies: Javascript, Chrome Extensions</small> <!-- Added class for styling -->
                 </div>
             </div>
             <div class="project">
@@ -520,7 +520,7 @@
                         just for the simplefication purpose of the application, and it introduzes the identity for
                         loging and registration.
                     </small>
-                    <small class="tech-label">Technologies: .NET, SQLite</small> <!-- Added class for styling -->
+                    <small class="tech-label">Technologies: C#, .NET, SQLite</small> <!-- Added class for styling -->
                 </div>
             </div>
             <div class="project">
