added more projects

--- a/index.html
+++ b/index.html
@@ -283,17 +283,22 @@
         }
 
         .tech-label {
-            display: block; /* Ensure it takes a new line */
-            margin-top: 10px; /* Add some space above */
-            font-weight: bold; /* Make it bold */
-            color: #88C0D0; /* Match the color with the theme */
+            display: block;
+            /* Ensure it takes a new line */
+            margin-top: 10px;
+            /* Add some space above */
+            font-weight: bold;
+            /* Make it bold */
+            color: #88C0D0;
+            /* Match the color with the theme */
         }
     </style>
 </head>
 
 <body>
     <div class="navbar">
-        <span style="color: #D8DEE9; margin-right: auto;"><i>thatsBruno </i>👨🏼‍💻</span> <!-- Added name to the navbar -->
+        <span style="color: #D8DEE9; margin-right: auto;"><i>thatsBruno </i>👨🏼‍💻</span>
+        <!-- Added name to the navbar -->
         <a href="#bio">About</a>
         <a href="#resume">Experience</a>
         <a href="#projects">Projects</a>
@@ -389,6 +394,23 @@
             <div class="project">
                 <div class="experience-time">
 
+                    <a href="https://github.com/thatsBruno/cc" target="_blank">
+                        <img src="images/cc.jpeg" alt="cc" class="project-img">
+                    </a>
+                </div>
+                <div class="experience-details">
+                    <strong>Coding Challenges</strong><br>
+                    <small>
+                        Weekly coding challenges by John Crickett.
+                        <br> Currently work in progress...
+                    </small>
+                    <!-- Moved technologies to the bottom -->
+                    <small class="tech-label">Technologies: Go</small> <!-- Added class for styling -->
+                </div>
+            </div>
+            <div class="project">
+                <div class="experience-time">
+
                     <a href="https://github.com/thatsBruno/p2p-golang" target="_blank">
                         <img src="images/p2p.jpeg" alt="p2p" class="project-img">
                     </a>
@@ -416,7 +438,8 @@
                         Lessons, Users, and Enrollment models. <br>
                         REST API as connection point.
                     </small>
-                    <small class="tech-label">Technologies: Java, Spring Boot, REST</small> <!-- Added class for styling -->
+                    <small class="tech-label">Technologies: Java, Spring Boot, REST</small>
+                    <!-- Added class for styling -->
                 </div>
             </div>
             <div class="project">
@@ -471,7 +494,8 @@
                         <br> Hosted with Supabase, this projects uses its buckets for the file storage as well as for
                         the filetransfer and autosign URLs.
                     </small>
-                    <small class="tech-label">Technologies: Typescript, React, Supabase</small> <!-- Added class for styling -->
+                    <small class="tech-label">Technologies: Typescript, React, Supabase</small>
+                    <!-- Added class for styling -->
                 </div>
             </div>
             <div class="project">
@@ -485,7 +509,8 @@
                     <small>
                         Chrome extension with pomodoro timer and task list.
                     </small>
-                    <small class="tech-label">Technologies: Javascript, Chrome Extensions</small> <!-- Added class for styling -->
+                    <small class="tech-label">Technologies: Javascript, Chrome Extensions</small>
+                    <!-- Added class for styling -->
                 </div>
             </div>
             <div class="project">
@@ -507,7 +532,7 @@
             <div class="project">
                 <div class="experience-time">
                     <a href="https://github.com/thatsBruno/ProductStore-FE" target="_blank">
-                    <img src="images/products-app2.jpeg" alt="ecommerceBE" class="project-img">
+                        <img src="images/products-app2.jpeg" alt="ecommerceBE" class="project-img">
                     </a>
                 </div>
                 <div class="experience-details">
@@ -551,7 +576,8 @@
                         Very simple .NET/React chat application.
                         .NET project using SignalR to perform Websocket connection web chat application.
                     </small>
-                    <small class="tech-label">Technologies: .NET, React, SignalR</small> <!-- Added class for styling -->
+                    <small class="tech-label">Technologies: .NET, React, SignalR</small>
+                    <!-- Added class for styling -->
                 </div>
             </div>
         </div>
