--- a/index.html
+++ b/index.html
@@ -362,7 +362,8 @@
                     <strong>Software Engineer</strong> - <i>JobDeploy @ Siemens</i><br>
                     <small>
                         • Developing .NET/Angular microservices and features to integrate with existent applications and
-                        services, integration with services like AWS Cloudwatch and signalR.
+                        services.<br>
+                        • Integration with services like AWS Cloudwatch and signalR.
                     </small>
                 </div>
             </div>
